appear to have fixed caching-related layout problem

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1486,6 +1486,8 @@ p#none-matching {
 		text-transform:none !important;
 		font-family: "WhitneyHTF-Medium" !important;
 		margin-top: -6px;
+		white-space: normal;
+		line-height: 140%;
 	}
 }
 
